unpackaged/main/default/objects/adroll__RollWorks_Account__c/adroll__RollWorks_Account__c.object-meta.xml
<CustomObject>
    <label>RollWorks Aggregated Account Data</label>
    <nameField>
        <displayFormat>RWA-{0000}</displayFormat>
        <label>RW Aggregated Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Aggregated Account Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>