unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__Account_Domain__c.field-meta.xml
<CustomField>
    <fullName>adroll__Account_Domain__c</fullName>
    <label>Domain</label>
    <length>253</length>
    <type>Text</type>
</CustomField>