unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__AdActivity_AdClicks7D__c.field-meta.xml
<CustomField>
    <fullName>adroll__AdActivity_AdClicks7D__c</fullName>
    <description>Ad clicks in the last 7 days</description>
    <label>Ad Clicks in the last 7 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>