unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__AdActivity_AdDrivenConversions60D__c.field-meta.xml
<CustomField>
    <fullName>adroll__AdActivity_AdDrivenConversions60D__c</fullName>
    <description>Advertising Driven Conversions in the last 60 days</description>
    <label>AdDriven Conversions in the last 60 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>