unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__AdActivity_AdDrivenUniqueVisitors90D__c.field-meta.xml
<CustomField>
    <fullName>adroll__AdActivity_AdDrivenUniqueVisitors90D__c</fullName>
    <description>Advertising Driven Unique Visitors in the last 90 Days</description>
    <label>Ad Driven Unique Visitors in 90 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>