unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__AdActivity_Impressions30D__c.field-meta.xml
<CustomField>
    <fullName>adroll__AdActivity_Impressions30D__c</fullName>
    <description>Ad impressions in the last 30 days</description>
    <label>Ad Impressions in the last 30 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>