unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__AdActivity_UniqueVisitors7D__c.field-meta.xml
<CustomField>
    <fullName>adroll__AdActivity_UniqueVisitors7D__c</fullName>
    <description>Unique Visitors in the last 7 days</description>
    <label>Unique Visitors in the last 7 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>