unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__Campaign_Names__c.field-meta.xml
<CustomField>
    <fullName>adroll__Campaign_Names__c</fullName>
    <description>Comma-separated list of active Campaign Names</description>
    <label>Active Campaigns</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>