unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__ICP1_Grade__c.field-meta.xml
<CustomField>
    <fullName>adroll__ICP1_Grade__c</fullName>
    <label>ICP 1 Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>