unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__ICP2_Name__c.field-meta.xml
<CustomField>
    <fullName>adroll__ICP2_Name__c</fullName>
    <label>ICP 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>