unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__ICP4_Grade__c.field-meta.xml
<CustomField>
    <fullName>adroll__ICP4_Grade__c</fullName>
    <label>ICP 4 Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>