unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__ICP4_Name__c.field-meta.xml
<CustomField>
    <fullName>adroll__ICP4_Name__c</fullName>
    <label>ICP 4 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>