unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__Journey_Prediction__c.field-meta.xml
<CustomField>
    <fullName>adroll__Journey_Prediction__c</fullName>
    <description>Confidence level that the account could become an open opportunity in the next 30 days.</description>
    <label>Journey Prediction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>