unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__JourneyStages_ChangeDate__c.field-meta.xml
<CustomField>
    <fullName>adroll__JourneyStages_ChangeDate__c</fullName>
    <description>The date the account transitioned to the current stage.</description>
    <label>Journey Stage Change Date</label>
    <type>Date</type>
</CustomField>