unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__JourneyStages_ChangeDirection__c.field-meta.xml
<CustomField>
    <fullName>adroll__JourneyStages_ChangeDirection__c</fullName>
    <description>Whether the last Journey Stage transition was a Progression or a Regression.</description>
    <label>Journey Stage Change Direction</label>
    <length>24</length>
    <type>Text</type>
</CustomField>