unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__JourneyStages_Current__c.field-meta.xml
<CustomField>
    <fullName>adroll__JourneyStages_Current__c</fullName>
    <description>The current Journey Stage the account is in.</description>
    <label>Current Journey Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>