unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__JourneyStages_Previous__c.field-meta.xml
<CustomField>
    <fullName>adroll__JourneyStages_Previous__c</fullName>
    <description>The Journey Stage the account was in before transitioning to the current stage.</description>
    <label>Previous Journey Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>