unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__KeywordIntent_HighIntentKeywords7D__c.field-meta.xml
<CustomField>
    <fullName>adroll__KeywordIntent_HighIntentKeywords7D__c</fullName>
    <description>Keywords with high intent in the last seven days, comma separated</description>
    <label>High Intent Keywords (last 7 days)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>