unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__KeywordIntent_VeryHighIntentCount7D__c.field-meta.xml
<CustomField>
    <fullName>adroll__KeywordIntent_VeryHighIntentCount7D__c</fullName>
    <description>Number of Keywords for which the account is demonstrating very high intent in the last seven days</description>
    <label>Count Very High Intent KWs (last 7 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>