unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__Playbook_Names__c.field-meta.xml
<CustomField>
    <fullName>adroll__Playbook_Names__c</fullName>
    <description>Comma-separated list of active Playbook Names</description>
    <label>Active Playbooks</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>