unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__SalesInsights_MatchedContactsCount__c.field-meta.xml
<CustomField>
    <fullName>adroll__SalesInsights_MatchedContactsCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Spike: Number of Matched Contacts</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>