unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__SalesInsights_SpikeDate__c.field-meta.xml
<CustomField>
    <fullName>adroll__SalesInsights_SpikeDate__c</fullName>
    <description>ISO date of the last spike for this account</description>
    <label>Spike Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>