unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__SalesInsights_SpikeLevel__c.field-meta.xml
<CustomField>
    <fullName>adroll__SalesInsights_SpikeLevel__c</fullName>
    <description>The Last Spike Level in the format of &quot;{a number between 1 and 3}-{Level}&quot;</description>
    <label>Spike Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>