unpackaged/main/default/objects/adroll__RollWorks_Account__c/fields/adroll__SalesInsights_SpikeMeasuredDate__c.field-meta.xml
<CustomField>
    <fullName>adroll__SalesInsights_SpikeMeasuredDate__c</fullName>
    <description>Date of the last spike for this account</description>
    <label>Spike Date</label>
    <type>Date</type>
</CustomField>